--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.42", features = ["cargo"] }
-fuse3 = { version = "0.8.1", features = ["async-io-runtime", "unprivileged"] }
 libc = "0.2.174"
 tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_info"] }
 tracing-subscriber = "0.3.19"
-tokio = { version = "1.46.0", features = ["full"] }
-futures-util = "0.3.31"
-async-trait = "0.1.88"
+tokio = { version = "1.47.1", features = ["full"] }
 git2 = "0.20.2"
+fuser = "0.15.1"
