--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "guse"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "guse"
+path = "src/main.rs"
+
 [dependencies]
 clap = { version = "4.5.42", features = ["cargo"] }
 libc = "0.2.174"
@@ -14,6 +18,5 @@ rusqlite = "0.37.0"
 ratatui = "0.29.0"
 thread_local = "1.1.9"
 chrono = "0.4.41"
-thiserror = "2.0.15"
 tempfile = "3.20.0"
 anyhow = "1.0.99"
