--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ clap = { version = "4.5.42", features = ["cargo"] }
 libc = "0.2.174"
 tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_info"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
-git2 = "0.20.2"
+git2 = { version = "0.20.2", features = ["vendored-openssl"] }
 fuser = "0.15.1"
-rusqlite = "0.37.0"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 ratatui = "0.29.0"
 thread_local = "1.1.9"
 chrono = "0.4.41"
