--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,11 @@ libc = "0.2.174"
 tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_info"] }
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 git2 = { version = "0.20.2", features = ["vendored-openssl"] }
-fuser = "0.15.1"
+fuser = { version = "0.15.1", features = ["abi-7-12"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 ratatui = "0.29.0"
 thread_local = "1.1.9"
 chrono = "0.4.41"
 tempfile = "3.20.0"
 anyhow = "1.0.99"
+ctrlc = "3.4.7"
