--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ thread_local = "1.1.9"
 chrono = "0.4.41"
 tempfile = "3.21.0"
 anyhow = "1.0.99"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
