--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ libc = "0.2.175"
 tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_info"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 git2 = { version = "0.20.2", features = ["vendored-openssl"] }
-fuser = { version = "0.15.1", features = ["abi-7-12"] }
+fuser = { version = "0.15.1", features = ["abi-7-15"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 ratatui = "0.29.0"
 thread_local = "1.1.9"
@@ -27,3 +27,4 @@ tempfile = "3.21.0"
 anyhow = "1.0.99"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
+crossbeam-channel = "0.5.15"
