--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ anyhow = "1.0.99"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 crossbeam-channel = "0.5.15"
+dashmap = "6.1.0"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.31.0"
