--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "guse"
 version = "0.3.1"
 edition = "2024"
-license = "Apache-2.0"
+license = "GPL-3.0-only"
 repository = "https://github.com/someotherself/GUSE"
 keywords = ["git", "fuse", "rust"]
 categories = ["filesystem"]
