--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,4 @@ rand = "0.9.2"
 num_cpus = "1.17.0"
 mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
 thiserror = "2.0.17"
+sha1 = "0.10.6"
