--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ num_cpus = "1.17.0"
 mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
 thiserror = "2.0.17"
 sha1 = "0.10.6"
+strip-ansi-escapes = "0.2.1"
