--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,4 @@ mlua = { version = "0.11.4", features = ["lua54", "vendored"] }
 thiserror = "2.0.17"
 sha1 = "0.10.6"
 strip-ansi-escapes = "0.2.1"
+shell-words = "1.1.0"
