--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "4.5.47", features = ["cargo"] }
 libc = "0.2.175"
-tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_info"] }
+tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 git2 = { version = "0.20.2", features = ["vendored-openssl"] }
 fuser = { version = "0.16.0", features = ["abi-7-28"] }
